# declair-rs

./: .gitignore  .typos.toml  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml  typos.yml
src/: main.rs
