[package]
name = "declair-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
dialoguer = { version = "0.12", features = ["completion"] }
directories = "6.0.0"
gix = { version = "0.73.0", default-features = false }
