[package]
name = "declair-rs"
description = "A command-line tool to search, add, and manage NixOS or Home Manager packages with optional automatic rebuilds."
version = "0.2.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
dialoguer = { version = "0.12", features = ["completion"] }
directories = "6.0.0"
gix = { version = "0.73.0", default-features = false }
clap = { version = "4.5.47", features = ["derive"] }
