[package]
name = "declair-rs"
description = "A command-line tool to search, add, and manage NixOS or Home Manager packages with optional automatic rebuilds."
version = "0.3.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
dialoguer = { version = "0.12", features = ["completion"] }
directories = "6.0.0"
gix = { version = "0.74.1", default-features = false }
fzf-wrapped = "0.1.4"
clap = { version = "4.5.53", features = ["derive"] }